# python-google-adk

./: Makefile  main.py  my_agent_data.db  pyproject.toml
001_quickstart/adk-streaming/: agent.py  main.py
001_quickstart/multi_tool_agent/: agent.py  env.sample
001_quickstart/roulette_wheel/: agent.py
002_tutorial/: main.py
01_quickstart/adk-streaming/: Makefile  agent.py  main.py
01_quickstart/multi_tool_agent/: agent.py  env.sample
01_quickstart/my_agent/: Makefile  agent.py
01_quickstart/roulette_wheel/: agent.py
01_quickstart/sequential_agent/: agent.py  env.sample  evalset0fbb5f.evalset.json
02_tutorial/: main.py
03_agents/: 01_llm_agent.py  02_workflow_agent.py  03_parallel_agent.py  04_custom_agents.py  05_multi_agent.py  README.md
04_tools/: 01_tools.py  02_tools_context.py  03_controlling_agent_flow.py  04_long_running_tools.py  05_agent_as_tool.py  06_google_search.py  07_code_execution.py  08_mcp.py
05_sessions_and_memory/: 01_session.py  02_state.py  03_state_delta.py  04_memory.py  llm.py
data/: run.json  run_sse.json
ollama_agent/: README.md  pyproject.toml
ollama_agent/src/ollama_agent/: __init__.py  agent.py
